# evvm-fisher

./: .env.example  .gitignore  ARCHITECTURE.md  COMPLETENESS_CHECK.md  DEPLOYMENT_SUCCESS.md  DOCUMENTATION_INDEX.md  FISHER_COMPARISON.md  GAS_COMPARISON.txt  INTEGRATION.md  LICENSE.md  PROPOSAL.md  README.md  SECURITY_DESIGN_DECISIONS.md  hardhat.config.ts  package-lock.json  package.json  test-connection.js
contracts/fisher/: FisherProduction.sol  FisherWithFees.sol  HyperOptimizedFisher.sol  LonsdaleiteOptimizedFisher.sol  OptimizedFisher.sol
contracts/interfaces/: IEVVMCore.sol
contracts/libraries/: MathLib.sol  PhiComputer.sol
fisher-rust/: .dockerignore  .gitignore  COMPLETE_SYSTEM.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  ETHEREUM_SETUP.md  GAS_SAVINGS_VERIFICATION.md  INTEGRATION.md  QUICK_START.md  README.md  build.sh  config.example.json  docker-compose.yml  fisher-relayer.service
fisher-rust/examples/: run_fisher.rs
fisher-rust/src/: attestation.rs  blob.rs  error.rs  fishing_spot.rs  lib.rs  metrics.rs  phi_freeman.rs  phi_optimization.rs  relayer.rs  staking.rs  types.rs  wasm.rs  williams.rs
fisher-rust/tests/: gas_verification.rs
relayer/: .env.example  package-lock.json  package.json
relayer/src/: index.ts  logger.ts  relayer.ts  routes.ts
scripts/: deploy-sepolia.ts  deploy.ts
test/: HyperOptimized.test.ts  Lonsdaleite.test.ts  OptimizedFisher.test.ts
