[package]
name = "fisher-relayer"
version = "1.0.0"
edition = "2021"
authors = ["Your Team"]
description = "Production-grade Fisher intent relayer with Williams compression and TDX attestation"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "fisher-relayer"
path = "src/bin/fisher-relayer.rs"

[dependencies]
# Core async runtime
tokio = { version = "1.35", features = ["full", "time", "sync"] }
futures = "0.3"

# HTTP client for fishing spots
reqwest = { version = "0.11", features = ["json"] }

# Ethereum and blockchain
ethers = { version = "2.0", features = ["abigen", "ws", "rustls"] }
alloy-primitives = { version = "0.7", features = ["serde"] }
alloy-eips = "0.1"  # For EIP-4844 blob support
bincode = "1.3"
serde-big-array = "0.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography (for signatures and attestation)
sha2 = "0.10"
sha3 = "0.10"
hmac = "0.12"
ed25519-dalek = "2.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Logging
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
hex = "0.4"
bs58 = "0.5"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Math for Williams compression
num-traits = "0.2"
num-integer = "0.1"

# Metrics
prometheus = { version = "0.13", features = ["process"] }

# WASM support
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", features = ["console"], optional = true }
js-sys = { version = "0.3", optional = true }
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
proptest = "1.4"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.release-wasm]
inherits = "release"
opt-level = "z"  # Optimize for size in WASM

[features]
default = ["std"]
std = []
